# llm-br

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
llm_br/: __init__.py  base.py  tools.py
llm_br/providers/: __init__.py  anthropic.py  ollama.py  openai_compat.py
tests/: test_base.py  test_config.py  test_providers.py  test_tools.py
