[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-br"
version = "0.1.0"
description = "Camada LLM plugável local-first (Ollama, Claude, DeepSeek, Maritaca) dos projetos FinweeJur"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FinweeJur" }]
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["llm_br*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
